[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
channel-myanmar = { version = "0.1.0", path = "../channel-myanmar" }
dotenv = "0.15.0"
reqwest = "0.12.4"
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
strum_macros = "0.26.4"
tokio = { version = "1.38.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["cors"] }
